Graph Editor showing cache curves regardless of filters #60753

Closed
opened 2019-01-22 16:34:09 +01:00 by Pablo Vazquez · 8 comments
Member

System Information
Operating system: Ubuntu Linux 18.04
Graphics card: NVIDIA RTX Quadro 6000

Blender Version
Broken: 2.8 master 22 January 2019 (185c2487a6)

Short description of error
It may be the case for other animation types, but at least animating the offset in Mesh Sequence Cache modifier makes the curve to show up in the Graph Editor, regardless of the filtering or if the "Only Selected" is on. As shown in the following image:

{F6367909, size=full}

It makes it really hard to tweak curves in other objects when there are dozens or hundreds of other, unrelated curves.

Even with all filters off:
{F6367950, size=full}

Exact steps for others to reproduce the error
graph_editor_cache_curves.blend
(Note: the cache file is missing because it can't be packed, but the curve is there)

  • Open .blend file, all three objects have animation.
  • Select each object, notice how the "Frame Offset" curve is always visible, even when toggling off all filters.
**System Information** Operating system: Ubuntu Linux 18.04 Graphics card: NVIDIA RTX Quadro 6000 **Blender Version** Broken: 2.8 master 22 January 2019 (185c2487a681) **Short description of error** It may be the case for other animation types, but at least animating the offset in Mesh Sequence Cache modifier makes the curve to show up in the Graph Editor, regardless of the filtering or if the "Only Selected" is on. As shown in the following image: {[F6367909](https://archive.blender.org/developer/F6367909/image.png), size=full} It makes it really hard to tweak curves in other objects when there are dozens or hundreds of other, unrelated curves. Even with **all filters off**: {[F6367950](https://archive.blender.org/developer/F6367950/image.png), size=full} **Exact steps for others to reproduce the error** [graph_editor_cache_curves.blend](https://archive.blender.org/developer/F6367938/graph_editor_cache_curves.blend) (Note: the cache file is missing because it can't be packed, but the curve is there) * Open .blend file, all three objects have animation. * Select each object, notice how the "Frame Offset" curve is always visible, even when toggling off all filters.
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Author
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Author
Member

Besides getting the "Only Selected" to work, maybe we need a new Filter type for cache files as well? What do you think @JoshuaLeung?

Besides getting the "Only Selected" to work, maybe we need a new Filter type for cache files as well? What do you think @JoshuaLeung?
Joshua Leung self-assigned this 2019-01-23 02:39:18 +01:00
Member

Yes, a new filter type for this case makes sense.

On a related note, I've always found that the way the Cache Files stuff was added to the animation filtering code has always been quite hacky.

Yes, a new filter type for this case makes sense. On a related note, I've always found that the way the Cache Files stuff was added to the animation filtering code has always been quite hacky.
Author
Member

In #60753#604717, @JoshuaLeung wrote:
Yes, a new filter type for this case makes sense.

On a related note, I've always found that the way the Cache Files stuff was added to the animation filtering code has always been quite hacky.

Time for tidying it up! :D But yes, can imagine, I also want to give the filters UI a pass as well since now it's two columns mixing Datablocks, Object Types, Modifiers etc.

For now, being able to hide all the Cache animation stuff would help so much! On Spring we are using Alembic files a lot in 100+ plants so it gets really hard to tweak any other kind of curves like nodes or cameras, when all other Cache curves are visible.

> In #60753#604717, @JoshuaLeung wrote: > Yes, a new filter type for this case makes sense. > > On a related note, I've always found that the way the Cache Files stuff was added to the animation filtering code has always been quite hacky. Time for tidying it up! :D But yes, can imagine, I also want to give the filters UI a pass as well since now it's two columns mixing Datablocks, Object Types, Modifiers etc. For now, being able to hide all the Cache animation stuff would help so much! On Spring we are using Alembic files a lot in 100+ plants so it gets really hard to tweak any other kind of curves like nodes or cameras, when all other Cache curves are visible.
Member

@pablovazquez Could you recommend any files in particular with quite a few cache files present? I was looking for a test file so that I could check if the cleanups I had in mind would losing any functionality.

The current layout of the toggles could use some tweaks yes. It's currently in a hand-picked order to minimise the vertical size of that popover, while ensuring that the toggles won't change order too often when certain types of data suddenly become available in the scene.

@pablovazquez Could you recommend any files in particular with quite a few cache files present? I was looking for a test file so that I could check if the cleanups I had in mind would losing any functionality. The current layout of the toggles could use some tweaks yes. It's currently in a hand-picked order to minimise the vertical size of that popover, while ensuring that the toggles won't change order too often when certain types of data suddenly become available in the scene.
First-time contributor

This issue was referenced by 65340ad73f

This issue was referenced by 65340ad73f4c70936a5132bc5d8f911408cfb826
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60753
No description provided.